# uchardet

./: DESCRIPTION  LICENSE.note  MD5  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac
R/: RcppExports.R  detect.R  uchardet-package.R
inst/: COPYRIGHTS
inst/doc/: uchardet.R  uchardet.Rmd  uchardet.html
inst/examples/: ex_detect_file.R  ex_detect_raw.R  ex_detect_str.R  ko.txt  ru.txt  zh.txt
inst/include/: uchardet.h  uchardet_RcppExports.h
inst/tinytest/: setup.R  test-detect-file.R  test-detect-raw.R  test-detect-str.R
man/: detect_file_enc.Rd  detect_raw_enc.Rd  detect_str_enc.Rd  uchardet.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  detect-file.cpp  detect-raw.cpp  detect-str.cpp  detect.cpp  init.cpp
tests/: tinytest.R
vignettes/: uchardet.Rmd
